[package]
name = "icc-patternfly-yew-core"
version = "0.1.0"
authors = ["Patrick Luell <pluell@iccdesigns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.2.1"
icc-patternfly-yew-icons = { path = "../icc-patternfly-yew-icons" }
log = "0.4"
rand = "0.8.3"
wasm-bindgen = "0.2.71"
web-sys = { version = "0.3.48", features = ["Event", "NodeList", "Window"] }
yew = { version = "0.17.4", features = ["web_sys"] }
yew-router = { version = "0.14.0", features = ["web_sys"] }
yewtil = "0.3.2"